20050907:  version 0.6.3:
           ~4x speedup for proj4 wrapper (now uses buffer protocol
           to access data in Numeric or numarray arrays).
           This means that class instantiation using resolution='i'
           is nearly twice as fast (there is still a lot of additonal
           overhead in I/O and processing of coastline polygons).
           Should now handle Numeric to numarray conversions internally,
           so removed warning when rcParams['numerix'] != 'numarray'.
20050901:  version 0.6.2:
           Warning issued if numerix = 'Numeric' (a user reported
           crashes due to botched Numeric --> numarray conversions).
           Changes to proj4 wrapper to make Basemap instances pickle-able.  
20050814:  version 0.6.1:
           Added hurrtracks.py example (plot hurricane tracks from
           shapefile). 
           Now includes pyshapelib (extracted from Thuban source).
20050811:  version 0.6:
           sf bug #1254163 (make sure lat/lon limits of projection are floats)
           wiki_example.py and plotclimdiv.py examples added.
           Added 'readshapefile' method for reading and plotting data
           from ESRI shapefiles (requires pyshapelib from Thuban).
           plotclimdiv.py is an example that illustrates this.
20050628:  version 0.5.2:
           fixed bug in meridian labelling when lon > 360 or lon < -180.
           Now fully "pylab free" if 'ax' keyword is used in Basemap.__init__
           or all of the Basemap methods that do drawing.
20050626:  version 0.5.1:
           Added ability to specify an existing axis instance in
           all Basemap methods (instead of just using current one).
           Default is still to use current axis instance.
           Full control of font properties for parallel and meridian
           labels (now uses unicode instead of mathtext for degree symbol).
20050602:  version 0.5
           Added Orthographic, Mollweide and Robinson projections. 