@@ -36,15 +36,6 @@ include lib/matplotlib/toolkits/basemap/__init__.py
 include lib/matplotlib/toolkits/basemap/basemap.py
 include lib/matplotlib/toolkits/basemap/proj.py
 include lib/matplotlib/toolkits/basemap/greatcircle.py
-include data/countries_l.txt
-include data/countries_i.txt
-include data/countries_c.txt
-include data/states_l.txt
-include data/states_i.txt
-include data/states_c.txt
-include data/gshhs_c.txt
-include data/gshhs_l.txt
-include data/gshhs_i.txt
 include pyshapelib/README pyshapelib/COPYING pyshapelib/ChangeLog pyshapelib/NEWS
 include pyshapelib/*.i pyshapelib/*.c pyshapelib/*.py pyshapelib/*.h
 include pyshapelib/shapelib/*.c pyshapelib/shapelib/*.h
